--- a/AM/Lib/x86/Makefile
+++ b/AM/Lib/x86/Makefile
@@ -3,25 +3,28 @@ CC = gcc
 LD = ld
 CFLAGS = -m32 -march=i386 -static -MD -std=gnu89 -ggdb \
 		 -fno-builtin -fno-stack-protector -fno-omit-frame-pointer \
-		 -Wall -Werror -O2 -I../include
+		 -Wall -Werror -O2 -I../../include/common -I../../include/x86
 ASFLAGS = -ggdb -m32 -MD
 LDFLAGS = -melf_i386
 
 OBJ_DIR = obj
 CSRC = $(shell find -L . -name "*.c")
 SSRC = $(shell find -L . -name "*.S")
-LIBS = $(shell find ../Lib/obj -name "*.o")
 OBJECTS = $(SSRC:%.S=$(OBJ_DIR)/%.o) $(CSRC:%.c=$(OBJ_DIR)/%.o)
-DOT_D = $(SSRC:.S=.d) $(CSRC:.c=.d)
 ASMS = $(CSRC:.c=.S)
+LIBS = libam-$(ARCH).a
 
-umain: $(OBJECTS)
-	$(LD) $(LDFLAGS) -e main -Ttext 0x200000 -o umain $(OBJECTS) $(LIBS)
+# ********************
+# Rules of Compilation
+# ********************
 
-clean:
-	rm -rf $(OBJECTS) $(OBJECTS:.o=.d) umain obj
+LIBS: $(OBJECTS)
+	ar rcs $(LIBS) $(OBJECTS)
 
 # Common rule
 $(OBJ_DIR)/%.o: %.[cS]
 	@mkdir -p `dirname $@`
 	$(CC) $(CFLAGS) -c $< -o $@
+
+clean:
+	-rm -rf *.a $(OBJECTS) obj *.txt> /dev/null
