--- a/AM/src/makers/mips/Makefile
+++ b/AM/src/makers/mips/Makefile
@@ -29,8 +29,8 @@ OBJECTS = $(SSRC:%.S=$(OBJ_DIR)/%.o) $(CSRC:%.c=$(OBJ_DIR)/%.o)
 DOT_D = $(SSRC:.S=.d) $(CSRC:.c=.d)
 ASMS = $(CSRC:.c=.S)
 
-umain: $(OBJECTS)
-	$(LD) $(LDFLAGS) -e main -Ttext 0x200000 -o ../../test/umain $(OBJECTS) $(LIBS)
+umain: ../../../build/$(ARCH)/*.o $(OBJECTS)
+	$(LD) $(LDFLAGS) -T loader.ld -o ../../test/umain ../../../build/$(ARCH)/*.o $(OBJECTS) $(LIBS)
 
 clean:
 	rm -rf $(OBJECTS) $(OBJECTS:.o=.d) ../../test/umain obj ../test
