test good for FPGA

--- a/AM/Makefile
+++ b/AM/Makefile
@@ -1,4 +1,4 @@
-ARCH = mips
+ARCH = x86
 
 all:
 	@cd arch/$(ARCH); make
@@ -11,12 +11,11 @@ x86:
 	qemu-system-i386 -serial stdio $(ARCH)_out/os.img
 
 mips:
-	@cd arch/$(ARCH); make OBJ
 	@cd src/makers/$(ARCH); make
 	mips-linux-gnu-objcopy -O binary src/test/umain $(ARCH)_out/umain.bin
 	mips-linux-gnu-objdump -d src/test/umain > $(ARCH)_out/code.txt
 	python python/bin2text.py $(ARCH)_out/umain.bin $(ARCH)_out/ram.txt
-	python python/gen_bram_coe.py $(ARCH)_out/umain.bin app.coe
+	python python/gen_bram_coe.py $(ARCH)_out/umain.bin $(ARCH)_out/app.coe
 	python python/instr_is_legal.py
 
 clean:
@@ -24,4 +23,3 @@ clean:
 	@cd Lib/$(ARCH); make clean
 	@cd src/makers/$(ARCH); make clean
 	-rm -rf $(ARCH)_out
-	-rm -rf *.coe
