--- a/AM/arch/mips/Makefile
+++ b/AM/arch/mips/Makefile
@@ -20,15 +20,10 @@ ASFLAGS = -MD -mno-check-zero-division -mips32 -O0 -mno-abicalls
 ASFLAGS += -fno-pic -fno-delayed-branch
 LDFLAGS = 
 
-OBJECTS = $(shell find -L . -name "*.o")
-
 mips-arch:
-	@cd boot; make;
-	@cd kernel; make;
-	@cd ../../build; rm -rf mips; mkdir mips;
-
-OBJ:
-	-cp $(OBJECTS) ../../build/mips/
+	@cd ../../build; mkdir mips
+	@cd boot; make && make cp;
+	@cd kernel; make && make cp;
 
 clean:
 	@cd boot; make clean;
