Revert "test good for FPGA"
This reverts commit 180cd07b79a5213b8961214c6d87e3c056314cd1.

--- a/arch/mips/Makefile
+++ b/arch/mips/Makefile
@@ -20,10 +20,15 @@ ASFLAGS = -MD -mno-check-zero-division -mips32 -O0 -mno-abicalls
 ASFLAGS += -fno-pic -fno-delayed-branch
 LDFLAGS = 
 
+OBJECTS = $(shell find -L . -name "*.o")
+
 mips-arch:
-	@cd ../../build; mkdir mips
-	@cd boot; make && make cp;
-	@cd kernel; make && make cp;
+	@cd boot; make;
+	@cd kernel; make;
+	@cd ../../build; rm -rf mips; mkdir mips;
+
+OBJ:
+	-cp $(OBJECTS) ../../build/mips/
 
 clean:
 	@cd boot; make clean;
