--- a/am/arch/mips32-npc/img/build
+++ b/am/arch/mips32-npc/img/build
@@ -11,6 +11,7 @@ mips-linux-gnu-ld -T $DIR/loader.ld -e _start -o ./build/kernel.o $DIR/boot/star
 KERN=$(readlink -f ./build/kernel.o)
 
 # generate COE
+mips-linux-gnu-objdump -d $KERN > ./build/code.txt
 mips-linux-gnu-objcopy -O binary $KERN ./build/kernel.bin
 python $DIR/scripts/bin2text.py ./build/kernel.bin ./build/ram.txt
 python $DIR/scripts/gen_bram_coe.py ./build/kernel.bin ./build/app.coe
