--- a/am/arch/native/img/build
+++ b/am/arch/native/img/build
@@ -3,4 +3,4 @@
 DEST=$1
 shift
 
-g++ -o "$DEST" -Wl,--start-group $@ -Wl,--end-group -lallegro -lallegro_main -lallegro_primitives
+g++ -o "$DEST" -Wl,--start-group $@ -Wl,--end-group -lSDL2
