--- a/apps/cputest/Makefile.max
+++ b/apps/cputest/Makefile.max
@@ -1,7 +1,3 @@
-SRCS += max.c
-AM_HOME = /home/jyy/Projects/nexus-am/
-
-all:
-	@echo $A
- 
-include ${AM_HOME}/Makefile.app
+NAME = max
+SRCS = max.c
+include $(AM_HOME)/Makefile.app
