--- a/klib/Makefile
+++ b/klib/Makefile
@@ -1,3 +1,3 @@
-SRCS += printk.c string.c
-AM_HOME = /home/jyy/Projects/nexus-am/
-include ${AM_HOME}/Makefile.app
+NAME = klib
+SRCS = printk.c string.c
+include $(AM_HOME)/Makefile.app
