--- a/tests/guitest/Makefile
+++ b/tests/guitest/Makefile
@@ -1,4 +1,5 @@
 NAME = guitest
+#SRCS = imgui_impl_sdl.cpp main.cpp
 SRCS = guitest-am.cpp
 INC_DIR += $(AM_HOME)/libs/imgui/include
 LINK_FILES += $(AM_HOME)/libs/imgui/build/imgui-$(ARCH).a
