--- a/libs/imgui/Makefile
+++ b/libs/imgui/Makefile
@@ -1,4 +1,4 @@
 NAME = imgui
 SRCS = src/imgui.cpp src/imgui_draw.cpp src/imgui_demo.cpp
-INC_DIR += $(AM_HOME)/libs/klib/
+LIBS = klib
 include $(AM_HOME)/Makefile.lib
