add compile option in arch mips32-minimal

--- a/Makefile.compile
+++ b/Makefile.compile
@@ -33,6 +33,7 @@ endif
 ifeq ($(ARCH), mips32-minimal)
 CXX = $(CROSS_COMPILE)g++-5
 CFLAGS   += -MD -fno-pic -static -fno-strict-aliasing -fno-builtin -fno-stack-protector -fno-delayed-branch -mno-abicalls -march=mips32 -mno-check-zero-division -EL
+CFLAGS   += -mno-llsc -mno-imadd -mno-mad
 CXXFLAGS += -fno-pic -static -fno-strict-aliasing -fno-builtin -fno-stack-protector -fno-delayed-branch -mno-abicalls -march=mips32 -ffreestanding -fno-rtti -fno-exceptions -mno-check-zero-division -EL
 ASFLAGS  += -march=mips32 -EL -MD -mno-check-zero-division -O0 -mno-abicalls -fno-pic -fno-delayed-branch
 endif
