--- a/am/arch/mips32-npc/img/build
+++ b/am/arch/mips32-npc/img/build
@@ -6,9 +6,7 @@ shift
 
 bash -c "cd $DIR/boot && make"
 
-mips-linux-gnu-ld -EL -T $DIR/loader.ld -e _start -o ${DEST}.o $DIR/boot/start.o --start-group $@ --end-group &&  \
-mips-linux-gnu-objdump -d ${DEST}.o > ${DEST}.code.txt && \
-mips-linux-gnu-objcopy -O binary ${DEST}.o ${DEST}.bin && \
-python $DIR/scripts/gen_bram_coe.py ${DEST}.bin ${DEST}.coe && \
-mips-linux-gnu-objdump -d ${DEST}.o | python $DIR/scripts/instr_check.py
+mips-linux-gnu-ld -EL -T $DIR/loader.ld -e _start -o ${DEST} $DIR/boot/start.o --start-group $@ --end-group &&  \
+mips-linux-gnu-objdump -d ${DEST} > ${DEST}.code.txt && \
+mips-linux-gnu-objdump -d ${DEST} | python $DIR/scripts/instr_check.py
 
