--- a/Makefile.compile
+++ b/Makefile.compile
@@ -1,9 +1,9 @@
 # Compilation flags
 ARCH_SPLIT = $(subst -, ,$(ARCH))
-REAL_ARCH  = $(word 1,$(ARCH_SPLIT))
+ISA        = $(word 1,$(ARCH_SPLIT))
 PLATFORM   = $(word 2,$(ARCH_SPLIT))
 
-ifeq ($(REAL_ARCH), mips32)
+ifeq ($(ISA), mips32)
 CROSS_COMPILE = mips-linux-gnu-
 endif
 
@@ -18,7 +18,7 @@ CFLAGS   += -std=gnu99 -O2 -MMD -Wall -Werror -ggdb $(INCLUDES)
 CXXFLAGS += -std=c++11 -O2 -MMD -Wall -Werror -ggdb $(INCLUDES)
 ASFLAGS  +=                -MMD                     $(INCLUDES)
 
-ifeq ($(REAL_ARCH), mips32)
+ifeq ($(ISA), mips32)
 CXX = $(CROSS_COMPILE)g++-5
 CFLAGS_COMMON = -fno-pic -static -fno-strict-aliasing -fno-builtin -fno-stack-protector -fno-delayed-branch -mno-abicalls -march=mips32 -mno-check-zero-division -EL -mno-llsc -mno-imadd -mno-mad
 CFLAGS   += $(CFLAGS_COMMON)
@@ -26,7 +26,7 @@ CXXFLAGS += $(CFLAGS_COMMON) -ffreestanding -fno-rtti -fno-exceptions
 ASFLAGS  += -march=mips32 -EL -mno-check-zero-division -O0 -mno-abicalls -fno-pic -fno-delayed-branch
 endif
 
-ifeq ($(REAL_ARCH), x86)
+ifeq ($(ISA), x86)
 CFLAGS   += -m32 -fno-builtin -fno-stack-protector -fno-omit-frame-pointer
 CXXFLAGS += -m32 -fno-builtin -fno-stack-protector -fno-omit-frame-pointer -ffreestanding -fno-rtti -fno-exceptions
 ASFLAGS  += -m32
