--- a/Makefile.check
+++ b/Makefile.check
@@ -4,6 +4,7 @@ ifeq ($(AM_HOME),) # AM_HOME must exist
 $(error Environment variable AM_HOME must be defined.)
 endif
 
+ARCH ?= native
 ARCHS = $(shell ls $(AM_HOME)/am/arch/)
 
 ifeq ($(filter $(ARCHS), $(ARCH)), ) # ARCH must be valid
