--- a/am/arch/x86-nemu/img/build
+++ b/am/arch/x86-nemu/img/build
@@ -6,5 +6,5 @@ shift
 
 bash -c "cd $DIR/boot && make"
 
-ld -melf_i386 --gc-sections -T $DIR/loader.ld -e _start -o $DEST $DIR/boot/start.o $@
+ld -melf_i386 --gc-sections -T $DIR/loader.ld -e _start -o $DEST $DIR/boot/start.o --start-group $@ --end-group
 objdump -d $DEST > $DEST.txt
