Makefile.compile: add -march=i386 while compiling to x86
* this can prevent generating instructions newer than i386,
  which makes NEMU easier to implement

--- a/Makefile.compile
+++ b/Makefile.compile
@@ -27,8 +27,8 @@ ASFLAGS  += -march=mips32 -EL -mno-check-zero-division -O0 -mno-abicalls -fno-pi
 endif
 
 ifeq ($(ISA), x86)
-CFLAGS   += -m32 -fno-builtin -fno-stack-protector -fno-omit-frame-pointer
-CXXFLAGS += -m32 -fno-builtin -fno-stack-protector -fno-omit-frame-pointer -ffreestanding -fno-rtti -fno-exceptions
+CFLAGS   += -m32 -fno-builtin -fno-stack-protector -fno-omit-frame-pointer -march=i386
+CXXFLAGS += -m32 -fno-builtin -fno-stack-protector -fno-omit-frame-pointer -march=i386 -ffreestanding -fno-rtti -fno-exceptions
 ASFLAGS  += -m32
 endif
 
