--- a/tests/klibtest/Makefile
+++ b/tests/klibtest/Makefile
@@ -1,4 +1,4 @@
 NAME = klibtest
-SRCS = src/main.c
-LIBS += klib
+SRCS = $(shell find -L ./src/ -name "*.c" -o -name "*.cpp")
+ARCH = x86-qemu
 include $(AM_HOME)/Makefile.app
