--- a/am/arch/mips32-qemu/img/build
+++ b/am/arch/mips32-qemu/img/build
@@ -6,6 +6,6 @@ shift
 
 bash -c "cd $DIR/boot && make"
 
-mips-linux-gnu-ld --gc-sections -EL -T $DIR/loader.ld -e _start -o $DEST $DIR/boot/start.o $@
+mips-linux-gnu-ld --gc-sections -EL -T $DIR/loader.ld -e _start -o $DEST $DIR/boot/start.o --start-group $@ --end-group
 
 mips-linux-gnu-objdump -d $DEST > $DEST.txt
