qsort have small and large

--- a/apps/microbench/Makefile
+++ b/apps/microbench/Makefile
@@ -1,4 +1,4 @@
 NAME = microbench
-SRCS = $(shell find -L ./src/ -name "*.c" -o -name "*.cpp" -o -name "*.S")
+SRCS = src/bench.c src/qsort/qsort.c # $(shell find -L ./src/ -name "*.c" -o -name "*.cpp" -o -name "*.S")
 LIBS = klib
 include $(AM_HOME)/Makefile.app
