many benchmarks runs

--- a/apps/microbench/Makefile
+++ b/apps/microbench/Makefile
@@ -1,4 +1,10 @@
 NAME = microbench
-SRCS = src/bench.c src/qsort/qsort.c # $(shell find -L ./src/ -name "*.c" -o -name "*.cpp" -o -name "*.S")
+SRCS = src/bench.c \
+       src/qsort/qsort.c \
+       src/queen/queen.c \
+       src/bf/bf.c \
+       src/fib/fib.c \
+       
+       # $(shell find -L ./src/ -name "*.c" -o -name "*.cpp" -o -name "*.S")
 LIBS = klib
 include $(AM_HOME)/Makefile.app
