--- a/apps/microbench/Makefile
+++ b/apps/microbench/Makefile
@@ -4,6 +4,7 @@ SRCS = src/bench.c \
        src/queen/queen.c \
        src/bf/bf.c \
        src/fib/fib.c \
+       src/sieve/sieve.c \
        
        # $(shell find -L ./src/ -name "*.c" -o -name "*.cpp" -o -name "*.S")
 LIBS = klib
