--- a/apps/microbench/Makefile
+++ b/apps/microbench/Makefile
@@ -5,6 +5,7 @@ SRCS = src/bench.c \
        src/bf/bf.c \
        src/fib/fib.c \
        src/sieve/sieve.c \
+       src/15pz/15pz.cpp \
        
        # $(shell find -L ./src/ -name "*.c" -o -name "*.cpp" -o -name "*.S")
 LIBS = klib
