add dinic and lzip

--- a/apps/microbench/Makefile
+++ b/apps/microbench/Makefile
@@ -6,6 +6,9 @@ SRCS = src/bench.c \
        src/fib/fib.c \
        src/sieve/sieve.c \
        src/15pz/15pz.cpp \
+       src/dinic/dinic.cpp \
+       src/lzip/lzip.c \
+       src/lzip/quicklz.c \
        
        # $(shell find -L ./src/ -name "*.c" -o -name "*.cpp" -o -name "*.S")
 LIBS = klib
