--- a/apps/microbench/Makefile.ref
+++ b/apps/microbench/Makefile.ref
@@ -1,5 +1,5 @@
 NAME = microbench
 SRCS = $(shell find -L ./src/ -name "*.c" -o -name "*.cpp")
-CFLAGS += -DSMALL
-CXXFLAGS += -DSMALL
+CFLAGS += -DSETTING_REF
+CXXFLAGS += -DSETTING_REF
 include $(AM_HOME)/Makefile.app
