--- a/Makefile.compile
+++ b/Makefile.compile
@@ -7,6 +7,10 @@ ifeq ($(ISA), mips32)
 CROSS_COMPILE = mips-linux-gnu-
 endif
 
+ifeq ($(ISA), riscv32)
+CROSS_COMPILE = riscv32-unknown-elf-
+endif
+
 ifeq ($(ISA), riscv64)
 CROSS_COMPILE = riscv64-unknown-linux-gnu-
 endif
@@ -30,6 +34,13 @@ CFLAGS_COMMON = -fno-pic -static -fno-strict-aliasing -fno-builtin -fno-stack-pr
 CFLAGS   += $(CFLAGS_COMMON)
 CXXFLAGS += $(CFLAGS_COMMON) -ffreestanding -fno-rtti -fno-exceptions
 ASFLAGS  += -march=mips32 -EL -mno-check-zero-division -O0 -mno-abicalls -fno-pic -fno-delayed-branch
+endif
+
+ifeq ($(ISA), riscv32)
+# it seems that mstrict-align does not work?
+CFLAGS_COMMON = -fno-pic -static -mcmodel=medany -fno-delete-null-pointer-checks -mabi=ilp32 -march=rv32i -mstrict-align
+CFLAGS   += $(CFLAGS_COMMON)
+CXXFLAGS += $(CFLAGS_COMMON) -ffreestanding -fno-rtti -fno-exceptions
 endif
 
 ifeq ($(ISA), riscv64)
