--- a/am/arch/x86-nemu/img/build
+++ b/am/arch/x86-nemu/img/build
@@ -4,7 +4,7 @@ DIR=${AM_HOME}/am/arch/x86-nemu/img
 DEST=$1
 shift
 
-bash -c "cd $DIR/boot && make"
+make -C $DIR/boot -s
 
 ld -melf_i386 --gc-sections -T $DIR/loader.ld -e _start -o $DEST $DIR/boot/start.o --start-group $@ --end-group
 objdump -d $DEST > $DEST.txt
