--- a/am/arch/x86-nemu/img/build
+++ b/am/arch/x86-nemu/img/build
@@ -8,3 +8,5 @@ make -C $DIR/boot -s
 
 ld -melf_i386 --gc-sections -T $DIR/loader.ld -e _start -o $DEST $DIR/boot/start.o --start-group $@ --end-group
 objdump -d $DEST > $DEST.txt
+
+objcopy -S --set-section-flags .bss=alloc,contents -O binary $DEST $DEST.bin
