klib: add rand()

--- a/libs/klib/Makefile
+++ b/libs/klib/Makefile
@@ -2,5 +2,6 @@ NAME = klib
 SRCS = src/printk.c \
        src/string.c \
        src/cpp.c \
+       src/stdlib.c \
        src/io.c
 include $(AM_HOME)/Makefile.lib
