--- a/Makefile.compile
+++ b/Makefile.compile
@@ -30,6 +30,13 @@ CFLAGS   += -std=gnu99 -O2 -MMD -Wall -Werror -ggdb $(INCLUDES) -D$(ISA_DEF) -fn
 CXXFLAGS += -std=c++11 -O2 -MMD -Wall -Werror -ggdb $(INCLUDES) -D$(ISA_DEF) -fno-builtin
 ASFLAGS  +=                -MMD                     $(INCLUDES) -D$(ISA_DEF)
 
+ifeq ($(ISA), native)
+CFLAGS_COMMON = -fpie
+CFLAGS   += $(CFLAGS_COMMON)
+CXXFLAGS += $(CFLAGS_COMMON)
+ASFLAGS  += -fpie -pie
+endif
+
 ifeq ($(ISA), mips32)
 CFLAGS_COMMON = -fno-pic -static -fno-strict-aliasing -fno-builtin -fno-stack-protector -fno-delayed-branch -mno-abicalls -march=mips32 -mno-check-zero-division -EL -mno-llsc -mno-imadd -mno-mad
 CFLAGS   += $(CFLAGS_COMMON)
