--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,3 +1,8 @@
+MDS    = $(shell find -s src -name "*.md")
+OUTPUT = ambook.html
+
+RENDER_LIST = $(foreach f, $(MDS), $(f) .blankline)
+
 all:
 	@mkdir -p build/
-	@echo 'Doc' > build/doc.txt
+	pandoc -f markdown -t html src/title.txt $(RENDER_LIST) > $(OUTPUT)
